--- a/package.json
+++ b/package.json
@@ -12,40 +12,40 @@
     "test": "react-scripts test"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
-    "apollo-boost": "^0.4.4",
-    "baseui": "^9.65.3",
-    "bootstrap": "^4.4.1",
-    "chart.js": "^2.9.3",
+    "@apollo/react-hooks": "4.0.0",
+    "apollo-boost": "^0.4.9",
+    "baseui": "13.0.0",
+    "bootstrap": "5.3.3",
+    "chart.js": "4.4.6",
     "fs": "0.0.1-security",
-    "gh-pages": "^2.1.1",
-    "graphql": "^14.5.8",
-    "lottie-web": "^5.7.11",
-    "node-fetch": "^2.6.7",
-    "node-sass": "^4.14.1",
-    "prettier-package-json": "^2.1.3",
-    "radium": "^0.26.0",
-    "react": "^16.10.2",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-chartjs-2": "^2.9.0",
-    "react-dom": "^16.10.2",
-    "react-ga": "^3.3.0",
-    "react-helmet": "^6.1.0",
+    "gh-pages": "6.2.0",
+    "graphql": "15.0.0",
+    "history": "^5.3.0",
+    "lottie-web": "5.12.2",
+    "node-fetch": "3.3.2",
+    "node-sass": "9.0.0",
+    "prettier-package-json": "2.8.0",
+    "react": "16.14.0",
+    "react-bootstrap": "2.10.5",
+    "react-chartjs-2": "5.2.0",
+    "react-dom": "16.14.0",
+    "react-ga": "3.3.1",
+    "react-helmet": "6.1.0",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "react-spring": "^8.0.27",
-    "styled-components": "^5.1.1",
-    "styletron-engine-atomic": "^1.4.6",
-    "styletron-react": "^5.2.7",
-    "typewriter-effect": "^2.18.0"
+    "react-router-dom": "6.28.0",
+    "react-scripts": "5.0.1",
+    "react-spring": "9.7.4",
+    "styled-components": "6.1.13",
+    "styletron-engine-atomic": "1.6.2",
+    "styletron-react": "6.1.1",
+    "typewriter-effect": "2.18.0"
   },
   "devDependencies": {
     "@iconify/icons-logos": "^1.0.9",
-    "@iconify/react": "^1.1.1",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
-    "prettier": "2.0.5"
+    "@iconify/react": "5.0.2",
+    "husky": "9.1.6",
+    "lint-staged": "15.2.10",
+    "prettier": "3.3.3"
   },
   "browserslist": {
     "production": [
