--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "private": true,
   "name": "datasciencefolio",
   "version": "0.1.0",
-  "homepage": ".",
+  "type": "module",
   "scripts": {
-    "build": "react-scripts build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b gh-pages -d build",
-    "eject": "react-scripts eject",
-    "start": "react-scripts start",
-    "test": "react-scripts test"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@apollo/react-hooks": "4.0.0",
@@ -38,7 +35,10 @@
     "styled-components": "6.1.13",
     "styletron-engine-atomic": "1.6.2",
     "styletron-react": "6.1.1",
-    "typewriter-effect": "2.18.0"
+    "typewriter-effect": "2.18.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "globals": "^15.12.0",
+    "vite": "^6.0.1"
   },
   "devDependencies": {
     "@iconify/icons-logos": "^1.0.9",
@@ -69,6 +69,6 @@
   },
   "lint-staged": {
     "*.json": "prettier-package-json --write",
-    "*.{js,css,md}": "prettier --write"
+    "*.{js,jsx,css,md}": "prettier --write"
   }
 }
