--- a/package.json
+++ b/package.json
@@ -6,46 +6,32 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@apollo/react-hooks": "4.0.0",
-    "apollo-boost": "^0.4.9",
     "baseui": "13.0.0",
-    "bootstrap": "5.3.3",
-    "chart.js": "4.4.6",
-    "fs": "0.0.1-security",
     "gh-pages": "6.2.0",
-    "graphql": "15.0.0",
-    "history": "^5.3.0",
     "lottie-web": "5.12.2",
-    "node-fetch": "3.3.2",
-    "node-sass": "9.0.0",
-    "prettier-package-json": "2.8.0",
     "react": "16.14.0",
     "react-bootstrap": "2.10.5",
-    "react-chartjs-2": "5.2.0",
     "react-dom": "16.14.0",
-    "react-ga": "3.3.1",
     "react-helmet": "6.1.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "6.28.0",
-    "react-scripts": "5.0.1",
-    "react-spring": "9.7.4",
     "styled-components": "6.1.13",
     "styletron-engine-atomic": "1.6.2",
     "styletron-react": "6.1.1",
     "typewriter-effect": "2.18.0",
     "@vitejs/plugin-react": "^4.3.4",
-    "globals": "^15.12.0",
     "vite": "^6.0.1"
   },
   "devDependencies": {
     "@iconify/icons-logos": "^1.0.9",
     "@iconify/react": "5.0.2",
     "husky": "9.1.6",
-    "lint-staged": "15.2.10",
-    "prettier": "3.3.3"
+    "lint-staged": "15.2.10"
   },
   "browserslist": {
     "production": [
