--- a/package.json
+++ b/package.json
@@ -11,27 +11,28 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "baseui": "13.0.0",
-    "gh-pages": "6.2.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "baseui": "15.0.0",
+    "gh-pages": "6.3.0",
     "lottie-web": "5.12.2",
-    "react": "16.14.0",
-    "react-bootstrap": "2.10.5",
-    "react-dom": "16.14.0",
+    "react": "18.2.0",
+    "react-awesome-reveal": "4.3.1",
+    "react-bootstrap": "2.10.9",
+    "react-dom": "18.2.0",
     "react-helmet": "6.1.0",
-    "react-reveal": "^1.2.2",
-    "react-router-dom": "6.28.0",
-    "styled-components": "6.1.13",
+    "react-router-dom": "7.1.5",
+    "react-tooltip": "^5.28.0",
+    "styled-components": "6.1.15",
     "styletron-engine-atomic": "1.6.2",
     "styletron-react": "6.1.1",
-    "typewriter-effect": "2.18.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "vite": "^6.0.1"
+    "typewriter-effect": "2.21.0",
+    "vite": "6.1.0"
   },
   "devDependencies": {
     "@iconify/icons-logos": "^1.0.9",
-    "@iconify/react": "5.0.2",
-    "husky": "9.1.6",
-    "lint-staged": "15.2.10"
+    "@iconify/react": "5.2.0",
+    "husky": "9.1.7",
+    "lint-staged": "15.4.3"
   },
   "browserslist": {
     "production": [
